默认数据目录

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,5 +13,5 @@ es_heap_size: "8g"
 es_cluster_name: "elasticsearch"
 es_node_name: "node-1"
 es_cluster_hosts: "{{ elasticsearch_network_host }}"
-es_data_dir: "/var/lib/elasticsearch"
+es_data_dir: "/home/elasticsearch"
 es_log_dir: "/var/log/elasticsearch"
